Repaired the search blurring feature

--- a/src/components/filterbox.pcss
+++ b/src/components/filterbox.pcss
@@ -20,7 +20,7 @@
     background: rgba(210, 210, 210, 0.8);
   }
 
-  .made-selections .state-X {
+  &.made-selections .state-X {
     background: white;
     color: #333;
   }
